--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.14",
-    "@angular/cdk": "^11.2.3",
-    "@angular/common": "~12.2.14",
-    "@angular/compiler": "~12.2.14",
-    "@angular/core": "~11.2.3",
-    "@angular/forms": "~12.2.14",
-    "@angular/localize": "~12.2.14",
-    "@angular/material": "^11.2.3",
-    "@angular/platform-browser": "~12.2.14",
-    "@angular/platform-browser-dynamic": "~12.2.14",
-    "@angular/router": "~12.2.14",
+    "@angular/animations": "^13.1.0",
+    "@angular/cdk": "^12.2.13",
+    "@angular/common": "~13.1.0",
+    "@angular/compiler": "~13.1.0",
+    "@angular/core": "~13.1.0",
+    "@angular/fire": "^7.2.0",
+    "@angular/forms": "~13.1.0",
+    "@angular/localize": "~13.1.0",
+    "@angular/material": "^12.2.13",
+    "@angular/platform-browser": "~13.1.0",
+    "@angular/platform-browser-dynamic": "~13.1.0",
+    "@angular/router": "~13.1.0",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@ngneat/tailwind": "^6.0.3",
     "bootstrap": "^4.6.0",
+    "firebase": "^9.6.1",
     "ngx-material-timepicker": "^5.5.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -34,7 +36,7 @@
     "@angular-builders/custom-webpack": "^11.1.1",
     "@angular-devkit/build-angular": "~12.2.14",
     "@angular/cli": "~12.2.14",
-    "@angular/compiler-cli": "~12.2.14",
+    "@angular/compiler-cli": "~13.1.0",
     "@tailwindcss/forms": "0.2.1",
     "@tailwindcss/typography": "0.4.0",
     "@types/jasmine": "~3.6.0",
@@ -53,6 +55,6 @@
     "tailwindcss": "^2.0.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.5.3"
   }
 }
