--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@ngneat/tailwind": "^6.0.3",
     "bootstrap": "^4.6.0",
+    "cz-conventional-changelog": "^3.3.0",
     "firebase": "^9.6.1",
     "ngx-material-timepicker": "^5.5.3",
     "rxjs": "~6.6.0",
