--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 # profiling files
 chrome-profiler-events*.json
 speed-measure-plugin*.json
-
+src/configFirebase.*
 # IDEs and editors
 /.idea
 .project
@@ -32,6 +32,7 @@ speed-measure-plugin*.json
 .history/*
 
 # misc
+/.angular/cache
 /.sass-cache
 /connect.lock
 /coverage
