--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~11.2.3",
     "@angular/compiler": "~11.2.3",
     "@angular/core": "~11.2.3",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~11.2.3",
     "@angular/localize": "~11.2.3",
     "@angular/material": "^11.2.3",
@@ -25,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@ngneat/tailwind": "^6.0.3",
     "bootstrap": "^4.6.0",
+    "firebase": "^8.6.1",
     "ngx-material-timepicker": "^5.5.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -53,6 +55,13 @@
     "tailwindcss": "^2.0.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.2"
+    "typescript": "~4.1.2",
+    "@angular-devkit/architect": ">= 0.900 < 0.1300",
+    "firebase-tools": "^8.0.0 || ^9.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3",
+    "jsonc-parser": "^3.0.0"
   }
 }
